fixed styling of referrals page on desktop

--- a/referrals.html
+++ b/referrals.html
@@ -5,7 +5,6 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Aj: Newsletters</title>
-        <link rel="stylesheet" href="./css/main.css" />
         <link rel="stylesheet" href="./css/referral.css" />
         <style>
             .newsletter-list a:hover {
@@ -25,19 +24,21 @@
     </head>
 
     <body>
-        <nav class="container container--referral">
-            <a id="btn-back" href="/index.html"><span style="
-        font-size: 1.2rem;
-        margin-bottom: .2rem;
-        display: inline-block;
-        /* padding-bottom: 0.2rem; */
-    ">👈</span>home</a>
-            <!-- <h1 class="page-title">Sharing useful random things</h1> -->
+        <header class="container ">
+            <nav class="container">
+                <a id="btn-back" href="/index.html"><span style="
+            font-size: 1.2rem;
+            margin-bottom: .2rem;
+            display: inline-block;
+            /* padding-bottom: 0.2rem; */
+                ">👈</span>home</a>
+                <!-- <h1 class="page-title">Sharing useful random things</h1> -->
+
+            </nav>
             <h1 class="page-title">Referral Links</h1>
+        </header>
 
-        </nav>
-
-        <section class="container">
+        <section class="container container--referral">
 
             <h2 class="page-title page-title--secondary">Some products I trust & use :)</h2>
             <section class="container external-links">
@@ -47,7 +48,8 @@
                             href="https://unstoppabledomains.com/?ref=02e5a6bd3b91482">Unstoppable Domains (UD)
                             &#129109;</a>
                         <p class="external-links__code">Code : 02e5a6bd3b91482</p>
-                        <p class="external-links__info">We both get $10.</p>
+                        <p class="external-links__info">We both get $10 (<a
+                                href="https://unstoppabledomains.com/refer-a-friend">details</a>). </p>
                         <p class="external-links__info">Blockchain based Decentralized Domains - <br>You pay once
                             for
                             a (UD)domain that you own. Typical domains (.com), you basically rent them from
