added why I don't use WS-Trade for Crypto

--- a/random/index.html
+++ b/random/index.html
@@ -68,7 +68,22 @@
     <hr>
     <section class="container">
 
-      <h2 class="page-title page-title--secondary">I didn't write these :), but highllyyyy recommended</h2>
+      <h2 class="page-title page-title--secondary">I wrote these, but not insightful, more like to-do-useful</h2>
+      <section class="container external-links">
+        <ol class="external-links__list">
+          <li class="external-links__list--item">
+            <a class="external-links__links"
+              href="https://rowan-vanilla-795.notion.site/Why-I-Don-t-use-WEALTH-SIMPLE-TRADE-for-Crypto-0add9133dc824c9a85a9d89eff626235">Why
+              I Don't use WEALTH SIMPLE TRADE for Crypto &#129109;</a>
+          </li>
+        </ol>
+      </section>
+
+    </section>
+    <hr>
+    <section class="container">
+
+      <h2 class="page-title page-title--secondary">Other Authors :), highllyyyy recommended</h2>
       <section class="container external-links">
         <ol class="external-links__list">
           <li class="external-links__list--item">
@@ -76,10 +91,8 @@
               Identity &#129109;</a>
           </li>
         </ol>
-
-
-
       </section>
+
     </section>
 
 
