--- a/referrals.html
+++ b/referrals.html
@@ -56,6 +56,39 @@
                             the top 1-2 companies who issue them.</p>
 
                     </li>
+                    <li class="external-links__list--item">
+                        <a class="external-links__links" href="https://wazirx.com/invite/hvpkktd4">WazirX &#129109;</a>
+                        <p class="external-links__code">Code : hvpkktd4</p>
+                        <p class="external-links__info"> (<a href="https://wazirx.com/referral">details</a>). </p>
+                        <p class="external-links__info">It's an Indian Crypto Exchange. I haven't used other Indian
+                            Crypto Exchanges. <br>One things I
+                            like about this is - zero fees transfers from WazirX to Binance.
+                            like about this is - zero fees (for the time being) transfers from WazirX to Binance.</p>
+                    </li>
+                    <li class="external-links__list--item">
+                        <a class="external-links__links"
+                            href="https://www.binance.com/en/activity/referral-entry?fromActivityPage=true&ref=LIMIT_RL23NZXF">
+                            Binance
+                            &#129109;</a>
+                        <p class="external-links__code">Code : LIMIT_RL23NZXF </p>
+                        <p class="external-links__info">This referral is limited time only (not valid in 2022)</p>
+                        <p class="external-links__info"> (<a
+                                href="https://www.binance.com/en/support/faq/0987e2690cf44afd9e5e506730785930">details</a>).
+                        </p>
+                        <p class="external-links__info">It's the OG international exchange. Also would recommened for
+                            anyone in India, coz they acquired WazirX so it's free (for the time being) to move funds
+                            around.</p>
+                        <!-- 
+                        <li class="external-links__list--item">
+                        <a class="external-links__links"
+                            href="">
+                            &#129109;</a>
+                        <p class="external-links__code">Code : </p>
+                        <p class="external-links__info"> (<a
+                                href="">details</a>). </p>
+                        <p class="external-links__info"></p>
+                    </li>
+                 -->
                 </ol>
 
 
