added quick links page

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <body>
     <header>
       <nav class="nav">
+        <a class="nav__items" href="./quicklinks.html">quick links</a>
         <a class="nav__items" href="./newsletters/newsletter-archieve.html">newsletters</a>
         <a class="nav__items" href="./Q&A/questions.html">questions</a>
         <a class="nav__items" href="./random/index.html">writings</a>
