--- a/random/index.html
+++ b/random/index.html
@@ -71,7 +71,7 @@
       <h2 class="page-title page-title--secondary">I wrote these, but not insightful, more like to-do-useful</h2>
       <section class="container external-links">
         <ol class="external-links__list">
-          <li class="external-links__list--item">
+          <li id="dont_use_ws_trade_for_crypto" class="external-links__list--item">
             <a class="external-links__links"
               href="https://rowan-vanilla-795.notion.site/Why-I-Don-t-use-WEALTH-SIMPLE-TRADE-for-Crypto-0add9133dc824c9a85a9d89eff626235">Why
               I Don't use WEALTH SIMPLE TRADE for Crypto &#129109;</a>
