--- a/referrals.html
+++ b/referrals.html
@@ -59,11 +59,22 @@
                     <li class="external-links__list--item">
                         <a class="external-links__links" href="https://wazirx.com/invite/hvpkktd4">WazirX &#129109;</a>
                         <p class="external-links__code">Code : hvpkktd4</p>
-                        <p class="external-links__info"> (<a href="https://wazirx.com/referral">details</a>). </p>
+                        <p class="external-links__info"> (<a
+                                href="https://support.wazirx.com/hc/en-us/articles/360000766554-WazirX-Referral-Program-Participation-Tracking-Rules">details</a>).
+                        </p>
                         <p class="external-links__info">It's an Indian Crypto Exchange. I haven't used other Indian
                             Crypto Exchanges. <br>One things I
-                            like about this is - zero fees transfers from WazirX to Binance.
                             like about this is - zero fees (for the time being) transfers from WazirX to Binance.</p>
+                        <p class="external-links__info">
+                        <ul class="external-links__info">
+                            <li>You and your friends also get rewarded with 25 WRX coins each ( <a
+                                    href="https://www.coingecko.com/en/coins/wazirx">WRX Price</a> ).</li>
+                            <li>WRX coins are credited to your account as soon as you and your friend have
+                                <strong>completed
+                                    100 USDT worth of trades within 30 days of signing up</strong>.
+                            </li>
+                        </ul>
+                        </p>
                     </li>
                     <li class="external-links__list--item">
                         <a class="external-links__links"
