--- a/referrals.html
+++ b/referrals.html
@@ -71,7 +71,9 @@
                                     href="https://www.coingecko.com/en/coins/wazirx">WRX Price</a> ).</li>
                             <li>WRX coins are credited to your account as soon as you and your friend have
                                 <strong>completed
-                                    100 USDT worth of trades within 30 days of signing up</strong>.
+                                    100 USDT worth of trades within 30 days of signing up & <a
+                                        href="https://twitter.com/WazirXCares/status/1468600144627175426?s=20">before
+                                        27Jan,2022</a></strong>.
                             </li>
                         </ul>
                         </p>
