--- a/quicklinks.html
+++ b/quicklinks.html
@@ -33,12 +33,16 @@
                     <li class="list__item"><a href="http://"></a></li> -->
                 </ul>
             </section>
-            <!-- <section class="container container--links">
-                <h2 class="page-title--secondary">Other links</h2>
+            <section class="container container--links">
+                <h2 class="page-title--secondary">Other useful links</h2>
                 <ol class="list">
-                    <li class="list__item"><a href="http://">externals</a></li>
+                    <li class="list__item"><a class="list__link" href="https://haveibeenpwned.com/">';--have i been
+                            pwned?</a>
+                        <p class="list__info">Check if your email, password, phone number was leaked in any of the major
+                            hacks that are happening every couple of seconds, months, etc.</p>
+                    </li>
                 </ol>
-            </section> -->
+            </section>
         </main>
 
     </body>
