--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Ajeet Gill</title>
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
     <!-- SUGGESTION: rename title bar when visiter leaves the tab -->
     <!-- SUGGESTION: auto read the default theme of user system and set enable theme on the page accordingly -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
