--- a/referrals.html
+++ b/referrals.html
@@ -4,8 +4,9 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Aj: Newsletters</title>
+        <title>Aj: Referrals</title>
         <link rel="stylesheet" href="./css/referral.css" />
+        <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
         <style>
             .newsletter-list a:hover {
                 padding: .25rem 1.2rem .2rem 1.2rem;
@@ -41,26 +42,39 @@
         <section class="container container--referral">
 
             <h2 class="page-title page-title--secondary">Some products I trust & use :)</h2>
+
+            <section class="container external-links">
+                <ol>
+                    <li><a href="#ud">Unstoppable Domains</a></li>
+                    <li><a href="#wazirx">WazirX</a></li>
+                    <li><a href="#blockfolio">BlockFolio by FTX</a></li>
+                    <li><a href="#binance">Binance</a></li>
+                    <li><a href="#kucoin">kuCoin</a></li>
+                </ol>
+            </section>
             <section class="container external-links">
                 <ol class="external-links__list">
-                    <li class="external-links__list--item">
+                    <li id="ud" class="external-links__list--item">
                         <a class="external-links__links"
                             href="https://unstoppabledomains.com/?ref=02e5a6bd3b91482">Unstoppable Domains (UD)
                             &#129109;</a>
                         <p class="external-links__code">Code : 02e5a6bd3b91482</p>
                         <p class="external-links__info">We both get $10 (<a
-                                href="https://unstoppabledomains.com/refer-a-friend">details</a>). </p>
+                                href="https://unstoppabledomains.com/refer-a-friend">details</a> ). Open & see if there
+                            ar e
+                            any tasks which can increase the benefits </p>
                         <p class="external-links__info">Blockchain based Decentralized Domains - <br>You pay once
                             for
                             a (UD)domain that you own. Typical domains (.com), you basically rent them from
                             the top 1-2 companies who issue them.</p>
 
                     </li>
-                    <li class="external-links__list--item">
+                    <li id="wazirx" class="external-links__list--item">
                         <a class="external-links__links" href="https://wazirx.com/invite/hvpkktd4">WazirX &#129109;</a>
                         <p class="external-links__code">Code : hvpkktd4</p>
                         <p class="external-links__info"> (<a
-                                href="https://support.wazirx.com/hc/en-us/articles/360000766554-WazirX-Referral-Program-Participation-Tracking-Rules">details</a>).
+                                href="https://support.wazirx.com/hc/en-us/articles/360000766554-WazirX-Referral-Program-Participation-Tracking-Rules">details</a>
+                            ). Open & see if there are any tasks which can increase the benefits
                         </p>
                         <p class="external-links__info">It's an Indian Crypto Exchange. I haven't used other Indian
                             Crypto Exchanges. <br>One things I
@@ -78,7 +92,21 @@
                         </ul>
                         </p>
                     </li>
-                    <li class="external-links__list--item">
+                    <li id="blockfolio" class="external-links__list--item">
+                        <a class="external-links__links" href="https://link.blockfolio.com/9dzp/c0cb2a4e">FTX (ealier
+                            Blockfolio)(not same as FTX exchange)
+                            &#129109;</a>
+                        <p class="external-links__code">Code : 55044492</p>
+                        <p class="external-links__info"> (<a
+                                href="https://help.blockfolio.com/hc/en-us/articles/1260805598910-FTX-App-Referral-Program-Information">details</a>
+                            ). Open & see if there are any tasks which can increase the benefits
+                        </p>
+                        <p class="external-links__info">Make this account first if you haven't made account on any
+                            exchange or traded on exchange yet. I don't really use this for trading or buying Crypto,
+                            but to manage or see overview of portfolio. Exchanges are good but it's hard to see the
+                            overall performance of % gain/loss, or avg price, etc. Blockfolio is good for that.</p>
+                    </li>
+                    <li id="binance" class="external-links__list--item">
                         <a class="external-links__links"
                             href="https://www.binance.com/en/activity/referral-entry?fromActivityPage=true&ref=LIMIT_RL23NZXF">
                             Binance
@@ -86,19 +114,34 @@
                         <p class="external-links__code">Code : LIMIT_RL23NZXF </p>
                         <p class="external-links__info">This referral is limited time only (not valid in 2022)</p>
                         <p class="external-links__info"> (<a
-                                href="https://www.binance.com/en/support/faq/0987e2690cf44afd9e5e506730785930">details</a>).
+                                href="https://www.binance.com/en/support/faq/0987e2690cf44afd9e5e506730785930">details</a>
+                            ). Open & see if there are any tasks which can increase the benefits
                         </p>
                         <p class="external-links__info">It's the OG international exchange. Also would recommened for
                             anyone in India, coz they acquired WazirX so it's free (for the time being) to move funds
                             around.</p>
-                        <!-- 
+                    </li>
+                    <li id="kucoin" class="external-links__list--item">
+                        <a class="external-links__links" href="https://www.kucoin.com/ucenter/signup?rcode=rJKGTJW">
+                            kuCoin
+                            &#129109;</a>
+                        <p class="external-links__code">Code : rJKGTJW</p>
+                        <p class="external-links__info"> (<a href="https://www.kucoin.com/news/en-invite">details</a>
+                            ). Open & see if there are any tasks which can increase the benefits
+                        </p>
+                        <p class="external-links__info">kuCoin because it offers ton of Coins. <i><b>Most</b></i>
+                            early
+                            coins make their way to Binance & other big exchanges after kuCoin.</p>
+                    </li>
+
+                    <!-- 
                         <li class="external-links__list--item">
                         <a class="external-links__links"
                             href="">
                             &#129109;</a>
                         <p class="external-links__code">Code : </p>
                         <p class="external-links__info"> (<a
-                                href="">details</a>). </p>
+                                href="">details</a>). Open & see if there are any tasks which can increase the benefits </p>
                         <p class="external-links__info"></p>
                     </li>
                  -->
