added white space

--- a/referrals.html
+++ b/referrals.html
@@ -43,15 +43,17 @@
 
             <h2 class="page-title page-title--secondary">Some products I trust & use :)</h2>
 
-            <section class="container external-links">
-                <ol>
-                    <li><a href="#ud">Unstoppable Domains</a></li>
-                    <li><a href="#wazirx">WazirX</a></li>
-                    <li><a href="#blockfolio">BlockFolio by FTX</a></li>
-                    <li><a href="#binance">Binance</a></li>
-                    <li><a href="#kucoin">kuCoin</a></li>
+            <section class="container external-links toc">
+                <h3 class="toc__heading">Table of Content</h3>
+                <ol class="toc__list">
+                    <li class="toc__list-item"><a href="#ud">Unstoppable Domains</a></li>
+                    <li class="toc__list-item"><a href="#wazirx">WazirX</a></li>
+                    <li class="toc__list-item"><a href="#blockfolio">BlockFolio by FTX</a></li>
+                    <li class="toc__list-item"><a href="#binance">Binance</a></li>
+                    <li class="toc__list-item"><a href="#kucoin">kuCoin</a></li>
                 </ol>
             </section>
+            <hr>
             <section class="container external-links">
                 <ol class="external-links__list">
                     <li id="ud" class="external-links__list--item">
