added ftx referral

--- a/referrals.html
+++ b/referrals.html
@@ -136,6 +136,15 @@
                             coins make their way to Binance & other big exchanges after kuCoin.</p>
                     </li>
 
+                    <li class="external-links__list--item">
+                        <a class="external-links__links" href="https://ftx.com/profile#a=48294863">FTX
+                            &#129109;</a>
+                        <p class="external-links__code">Code : 48294863</p>
+                        <p class="external-links__info"> (<a
+                                href="https://help.ftx.com/hc/en-us/articles/360024780431-Referrals">details</a>). Open
+                            & see if there are any tasks which can increase the benefits </p>
+                        <p class="external-links__info">You get 5% discount on fees.</p>
+                    </li>
                     <!-- 
                         <li class="external-links__list--item">
                         <a class="external-links__links"
