Updated github handle

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div id="socialmedia" style="opacity: .1; transform: scale(.5);">
           <a href="https://www.instagram.com/ajeet_gill_/"><img class="social-media-icons" src="./assets/instagram.svg"
               alt="instagram account" /></a>
-          <a href="https://github.com/ajeetshergill"><img class="social-media-icons" src="./assets/github.svg"
+          <a href="https://github.com/ajeetgill"><img class="social-media-icons" src="./assets/github.svg"
               alt="github account" /></a>
           <a href="https://www.goodreads.com/user/show/83526171-ajeet-gill"><img class="social-media-icons"
               src="./assets/goodreads.svg" alt="goodreads account" /></a>
