removed email-newsletter for now

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
                 href="./newsletters/newsletter-archieve.html"> 'Newsletter📧' </a></span> <span
               style="font-size: .8rem; font-weight: 800;"> it's not boring</span> </p>
 
-          <button style="padding: 10px;margin-top: 10px;
+          <!--button style="padding: 10px;margin-top: 10px;
         border: solid 2px #88ee00;
         background-color: #bcff55;
         border-radius: 5px;
         box-shadow: #bbff55 0px 10px 25px;"><a
               style="text-decoration: none; font-weight: 900; text-transform: uppercase;"
-              href="https://forms.gle/G3MztEWUrnPScqCw9"> Get Free weekly newsletter</a></button>
+              href="https://forms.gle/G3MztEWUrnPScqCw9"> Get Free weekly newsletter</a></button-->
         </div>
         <div id="socialmedia" style="opacity: .1; transform: scale(.5);">
           <a href="https://www.instagram.com/ajeet_gill_/"><img class="social-media-icons" src="./assets/instagram.svg"
